--- a/app/views/bets/_form.html.erb
+++ b/app/views/bets/_form.html.erb
@@ -11,15 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id %>
-  </div>
 
   <div class="field">
-    <%= form.label :match_id %>
-    <%= form.number_field :match_id %>
+    <%= form.hidden_field :user_id , :value => current_user.id%>
   </div>
+
+<% if @custom_params %>
+  <div class="field">
+    <%= form.hidden_field :match_id, :value => @custom_params[0]%>
+  </div>
+<% else %>
+  <div class="field">
+    <%= form.label :match_id %>
+    <% options = options_from_collection_for_select(@matches, 'id', 'dropdown_data') %>
+    <%= form.select :match_id,  options %>
+  </div>
+<% end %>
 
   <div class="field">
     <%= form.label :home_goals %>
