--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,37 +1,39 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <h1>Partidos PollaGol</h1>
+  <br>
+  <% if  current_user.id == 1 %>  
+  <%= link_to 'Ingresar Nuevo Partido', new_match_path, :class => "btn btn-primary" %>
+  <br><br>
+  <h5>Admin: Ve, edita o elimina partidos, o bien</h5>
+  <% end %>  
+  
+  <h4>Selecciona un partido para hacer tu apuesta</h4>
 
-<h1>Partidos PollaGol</h1>
+  <% @matches.each do |match| %>
+    <div class="row container">
+      <div class="card container">
+        <div class="card-header"> 
+          <h5><%=match.short_name[0]%> - <%=match.short_name[1]%></h5> <%= match.start_time.to_formatted_s(:short) %>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Equipos: <%= match.home_away_names[0]%> (<%= match.home_goals%>) - <%= match.home_away_names[1]%> (<%= match.vis_goals%>) </h5>
+          <p class="card-text"> Estado: <%= match.status.capitalize %> </p>
+          <%= link_to 'Hacer apuesta', new_bet_path(:match_info => [match.id, match.status]), :class => "btn btn-secondary" %>
+          
+          <% if  current_user.id == 1 %>  
+            <%= link_to 'Detalles', match, :class => "btn btn-secondary" %>
+            <%= link_to 'Editar', edit_match_path(match), :class => "btn btn-secondary" %>
+            <%= link_to 'Eliminar', match, method: :delete, data: { confirm: 'Estás seguro de eliminar el partido?' }, :class => "btn btn-danger" %>
+          <% end%>
 
-<table>
-  <thead>
-    <tr>
-      <th>Fecha Partido</th>
-      <th>Local</th>
-      <th>Visitante</th>
-      <th>Goles Local</th>
-      <th>Goles Visitante</th>
-      <th>Estado</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+          
 
-  <tbody>
-    <% @matches.each do |match| %>
-      <tr>
-        <td><%= match.start_time %></td>
-        <td><%= match.home_id %></td>
-        <td><%= match.vis_id %></td>
-        <td><%= match.home_goals %></td>
-        <td><%= match.vis_goals %></td>
-        <td><%= match.status %></td>
-        <td><%= link_to 'Detalles', match %></td>
-        <td><%= link_to 'Editar', edit_match_path(match) %></td>
-        <td><%= link_to 'Eliminar', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </div>
+      </div>
+    </div>
+    <br>
+  <% end %>
+  
 
-<br>
-
-<%= link_to 'Ingresar Nuevo Partido', new_match_path %>
+</div>
