--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,38 +2,54 @@
 <div class="container">
   <h1>Partidos PollaGol</h1>
   <br>
-  <% if  current_user.id == 1 %>  
+  <% if  current_user.admin? %>  
   <%= link_to 'Ingresar Nuevo Partido', new_match_path, :class => "btn btn-primary" %>
   <br><br>
   <h5>Admin: Ve, edita o elimina partidos, o bien</h5>
   <% end %>  
   
   <h4>Selecciona un partido para hacer tu apuesta</h4>
-
-  <% @matches.each do |match| %>
-    <div class="row container">
-      <div class="card container">
-        <div class="card-header"> 
+    
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <% @matches.each do |match| %>
+      <div class="col">
+        <% if match.status_enum != "scheduled" %>
+          <div class="card">
+          <div class="card-header text-secondary"> 
           <h5><%=match.short_name[0]%> - <%=match.short_name[1]%></h5> <%= match.start_time.to_formatted_s(:short) %>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Equipos: <%= match.home_away_names[0]%> (<%= match.home_goals%>) - <%= match.home_away_names[1]%> (<%= match.vis_goals%>) </h5>
-          <p class="card-text"> Estado: <%= match.status.capitalize %> </p>
-          <%= link_to 'Hacer apuesta', new_bet_path(:match_info => [match.id, match.status]), :class => "btn btn-secondary" %>
-          
-          <% if  current_user.id == 1 %>  
-            <%= link_to 'Detalles', match, :class => "btn btn-secondary" %>
-            <%= link_to 'Editar', edit_match_path(match), :class => "btn btn-secondary" %>
-            <%= link_to 'Eliminar', match, method: :delete, data: { confirm: 'Estás seguro de eliminar el partido?' }, :class => "btn btn-danger" %>
-          <% end%>
+          </div>
+          <div class="card-body text-secondary">
+            <h5 class="card-title"><%= match.dynamic_title_str %> </h5>
+            <p class="card-text"><small class="text-muted"> <%= match.status_enum.capitalize %></small> </p>
+            <%= link_to 'Hacer apuesta', new_bet_path(:match_info => match.id), :class => "btn btn-secondary disabled", :disabled => true %>
 
+
+
+
+
+        
+        <% else%>
+          <div class="card  border-secondary mb-3 ">
+          <div class="card-header"> 
+          <h5><%=match.short_name[0]%> - <%=match.short_name[1]%></h5> <%= match.start_time.to_formatted_s(:short) %>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= match.dynamic_title_str %> </h5>
+            <p class="card-text"><small class="text-muted"> <%= match.status_enum.capitalize %></small> </p>
+            
+            <%= link_to 'Hacer apuesta', new_bet_path(:match_info => match.id), :class => "btn btn-secondary" %>
           
 
+        <% end%>
+            <% if  current_user.admin? %>  
+              <%= link_to 'Detalles', match, :class => "btn btn-secondary" %>
+              <%= link_to 'Editar', edit_match_path(match), :class => "btn btn-secondary" %>
+              <%= link_to 'Eliminar', match, method: :delete, data: { confirm: 'Estás seguro de eliminar el partido?' }, :class => "btn btn-danger" %>
+            <% end%>
+          </div>
         </div>
       </div>
+    <% end %>
     </div>
     <br>
-  <% end %>
-  
-
 </div>
