--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mis Apuestas</h1>
-
+<h1>Admin: Apuestas pollagol</h1>
 <table>
   <thead>
     <tr>
@@ -22,13 +21,9 @@
         <td><%= bet.visitor_goals %></td>
         <td><%= link_to 'Show', bet %></td>
         <td><%= link_to 'Edit', edit_bet_path(bet) %></td>
-        <td><%= link_to 'Destroy', bet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        #<td><%= link_to 'Destroy', bet, method: :delete%></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<%= @users %>
-<br>
-<%= link_to 'New Bet', new_bet_path %>
