--- a/app/views/bets/new.html.erb
+++ b/app/views/bets/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Bet</h1>
+<h3>Nueva apuesta: <br></h3>
+<h1><%= @matches.find(@custom_params).dynamic_title_str %> </h1>
+
+<h2> <%= @matches.find(@custom_params).start_time.to_formatted_s %> </h2>
+
+<br>
 
 <%= render 'form', bet: @bet %>
 
-<%= link_to 'Back', bets_path %>
+<%= link_to 'Back', matches_path %>
