--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <% if user_signed_in? %>
-
+<%
+=begin%>
+ 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Acciones
@@ -24,17 +26,22 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Apuestas", bets_path, class:"nav-link"%>
-        </li>
+        </li> 
+<%
+=end%>
         <li class="nav-item">
           <%= link_to "Partidos", matches_path, class:"nav-link"%>
         </li>
-        <li class="nav-item">
-          <%= link_to "Equipos", teams_path, class:"nav-link"%>
-        </li>
-        
+
+        <%if current_user.admin? %>
+          <li class="nav-item">
+            <%= link_to "Apuestas", bets_path, class:"nav-link"%>
+          </li>
+          
+          <li class="nav-item">
+            <%= link_to "Equipos", teams_path, class:"nav-link"%>
+          </li>
+        <%end%>
         <li class="nav-item">
           <%= link_to "Cerrar sesión", destroy_user_session_path, method: "Delete", class:"nav-link"%>
         </li>
