--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,14 @@
-<h1>HomePage PollaGol</h1>
+<div class="container text-center">
+<br>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">PollaGol</h1>
+    <p class="lead">PollaGol permite apostar y jugar con amigos<br> Ingresa a jugar aquí</p>
+    <p class="lead">
+      <a href="/users/sign_in" class="btn btn-lg btn-secondary">Ingresar</a>
+    </p>
+  </main>
 
+  <footer class="mastfoot mt-auto">
+      <p class="mt-5 mb-3 text-muted">&copy; 2022 </p>
+  </footer>
+</div>
