--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark"  style="background-color: #1f993f;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">
-      PollaGol
-      <%= image_tag("football.png", class: "d-inline-block align-text-mid", id: "navbar-logo", style:'height:35px; width:auto;') %>
+    <a class="navbar-brand" href="#">
       
+      <%= image_tag("pollagol.jpg", class: "d-inline-block align-text-mid", id: "navbar-logo", style:'height:35px; width:auto;') %>
+      PollaGol
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,23 +12,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <% if user_signed_in? %>
-<%
-=begin%>
- 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Acciones
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-            <li><a class="dropdown-item" href="#">Mis pollas</a></li>
-            <li><a class="dropdown-item" href="#">Mis partidos</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li> 
-<%
-=end%>
+
         <li class="nav-item">
           <%= link_to "Partidos", matches_path, class:"nav-link"%>
         </li>
@@ -54,10 +38,6 @@
         <% end %>
         
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
