--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,36 +1,63 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" style="background-color: #1f993f;">
+      <img class="mr-3" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48" padding="10">
+    <div class="lh-100">
+      <h5 class="mb-0 text-white lh-100" >   Equipos</h5>
+      <small>   ANFP Campeonato PlanVital</small>
+    </div>
+  </div>
+  <div class="my-3 p-3 bg-white rounded box-shadow">
+    <h6 class="border-bottom border-gray pb-2 mb-0">Disclaimer alert!</h6>
 
-<h1>Equipos PollaGol</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Seudónimo</th>
-      <th>Description</th>
-      <th>Championships</th>
-      <th>Year funded</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @teams.each do |team| %>
-    
+    <div class="media text-muted">    
+      <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray"> 
+        La información contenida acá no es realista ni está actualizada.
+      </p>
+    </div>
+  </div>
+  <table class="table table-hover">
+    <thead class="thead-light">
       <tr>
-        <td><%= team.name %></td>
-        <td><%= team.seudo %></td>
-        <td><%= team.description %></td>
-        <td><%= team.championships %></td>
-        <td><%= team.year_funded %></td>
-        <td><%= link_to 'Show', team %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th scope="row">Name</th>
+        <th>Seudónimo</th>
+        <th>Descripción</th>
+        <th>Campeonatos</th>
+        <th>Fundación</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @teams.each do |team| %>
+      
+        <tr>
+          <td><%= team.name %></td>
+          <td><%= team.seudo %></td>
+          <td><%= team.description %></td>
+          <td><%= team.championships %></td>
+          <td><%= team.year_funded %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to 'Show', team %></td>
+            <td><%= link_to 'Edit', edit_team_path(team) %></td>
+            <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<div>
+<div class="container">
+      
+
+     
+</div>
 
 <br>
+<% if current_user.admin? %>
+  <%= link_to 'New Team', new_team_path %>
+<%end%>
 
-<%= link_to 'New Team', new_team_path %>
+
+   
