--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,10 @@
 
         <%if current_user.admin? %>
           <li class="nav-item">
+            <%= link_to "Polla", pollas_path, class:"nav-link"%>
+          </li>
+
+          <li class="nav-item">
             <%= link_to "Apuestas", bets_path, class:"nav-link"%>
           </li>
           
