--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
   <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" style="background-color: #1f993f;">
-      <img class="mr-3" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48" padding="10">
+       <%= image_tag("logo_planvital.png", class: "mr-3", style:'height:85px; width:auto;') %>
     <div class="lh-100">
-      <h5 class="mb-0 text-white lh-100" >   Equipos</h5>
+      <h4 class="mb-0 text-white lh-100" >   Equipos</h4>
       <small>   ANFP Campeonato PlanVital</small>
     </div>
   </div>
   <div class="my-3 p-3 bg-white rounded box-shadow">
-    <h6 class="border-bottom border-gray pb-2 mb-0">Disclaimer alert!</h6>
+    <h6 class="border-bottom border-gray pb-2 mb-0">Disclaimer:</h6>
 
     <div class="media text-muted">    
       <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
