--- a/app/views/bets/edit.html.erb
+++ b/app/views/bets/edit.html.erb
@@ -1,8 +1,23 @@
-<h1>Editar apuesta</h1>
-<h3>(<%= @matches.find(params[:match_id]).start_time.to_formatted_s(:short) %> ) </h3>
-<h3><%= @matches.find(params[:match_id]).dynamic_title_str %></h3>
+<div class="container">
+    <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" style="background-color: #1f993f;">
+        <%= image_tag("logo_planvital.png", class: "mr-3", style:'height:85px; width:auto;') %>
+        <div class="lh-100">
+            <h4 class="mb-0 text-white lh-100" >   Editar apuesta:</h4>
+        </div>
+    </div>
 
+    <div class="my-3 p-3 bg-white rounded box-shadow">
+        <h5 class="border-bottom border-gray pb-2 mb-0">
+        <%= @matches.find(params[:match_id]).dynamic_title_str %></h5>
+        <small class="text-muted"> <%= @matches.find(params[:match_id]).start_time.to_formatted_s(:short) %></small>
+        <div class="media text-muted">    
+        
+        Tu predicción de goles para este partido : 
+        </div><br>
+        <%= render "edit_form", bet: @bet%>
 
-<%= render 'edit_form', bet: @bet %>
-
-<%= link_to 'Back', matches_path %>
+    
+    <br>
+    <%= link_to 'Cancelar', matches_path, class: "btn btn-sm btn-danger"  %>
+    </div>
+</div>
