--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -1,29 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Admin: Apuestas pollagol</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Fecha</th>
-      <th>Partido</th>
-      <th>Goles Local</th>
-      <th>Goles Visita</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @bets.each do |bet| %>
-      <tr>
-        <td><%= bet.match.start_time %></td>
-        <td><%= bet.pseudo_match %></td>
-        <td><%= bet.home_goals %></td>
-        <td><%= bet.visitor_goals %></td>
-        <td><%= link_to 'Show', bet %></td>
-        <td><%= link_to 'Edit', edit_bet_path(bet) %></td>
-        #<td><%= link_to 'Destroy', bet, method: :delete%></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="container">
+  <div class="d-flex align-items-left">
+    <%= render "score_jumbo", users: @users%>
+  </div>
+  <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" style="background-color: #1f993f;">
+      <%= image_tag("logo_planvital.png", class: "mr-3", style:'height:85px; width:auto;') %>
+      <div class="lh-100">
+          <h4 class="mb-0 text-white lh-100" >Apuestas</h4>
+      </div>
+  </div>
+  <% @matches.each do |match| %>
+    <%= render 'bet_jumbo', match: match, bets: @bets %>
+  <% end %>
+</div>
