--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= form.hidden_field :polla_id , :value => 1 %>
+  </div>
+
+  <div class="field">
     <%= form.label "Equipo Local  " %>
     <% options = options_from_collection_for_select(@all_teams, 'id', 'name') %>
     <%= form.select :home_id,  options %>
@@ -22,20 +26,6 @@
     <% options = options_from_collection_for_select(@all_teams, 'id', 'name') %>
     <%= form.select :vis_id,  options %>
   </div>
-
-  <%
-=begin%>
- <div class="field">
-    <%= form.label :home_goals %>
-    <%= form.number_field :home_goals %>
-  </div>
-
-  <div class="field">
-    <%= form.label :vis_goals %>
-    <%= form.number_field :vis_goals %>
-  </div> 
-<%
-=end%>
 
   <div class="field">
     <%= form.label :start_time %>
