--- a/app/views/pollas/index.html.erb
+++ b/app/views/pollas/index.html.erb
@@ -1,36 +1,42 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Pollas</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Descripcion</th>
-      <th>Puntos por goles</th>
-      <th>Puntos por ganador</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pollas.each do |polla| %>
+  <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" style="background-color: #1f993f;">
+       <%= image_tag("logo_planvital.png", class: "mr-3", style:'height:85px; width:auto;') %>
+    <div class="lh-100">
+      <h4 class="mb-0 text-white lh-100" > Pollas</h4>
+    </div>
+  </div>
+  <table class="table table-hover">
+    <thead class="thead-light">
       <tr>
-        <td><%= polla.name %></td>
-        <td><%= polla.description %></td>
-        <td><%= polla.exact_goals_points %></td>
-        <td><%= polla.winner_points %></td>
-        <td><%= link_to 'Show', polla %></td>
-        <td><%= link_to 'Edit', edit_polla_path(polla) %></td>
-        <td><%= link_to 'Destroy', polla, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Nombre</th>
+        <th>Descripcion</th>
+        <th>Puntos Gol</th>
+        <th>Puntos Ganador</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br><br>
+    <tbody>
+      <% @pollas.each do |polla| %>
+        <tr>
+          <td><%= polla.name %></td>
+          <td><%= polla.description %></td>
+          <td><%= polla.exact_goals_points %></td>
+          <td><%= polla.winner_points %></td>
+          <td><%= link_to 'Show', polla %></td>
+          <td><%= link_to 'Edit', edit_polla_path(polla) %></td>
+          <td><%= link_to 'Destroy', polla, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <br><br>
+
+  <br>
 
 
-<%= link_to 'Crear nueva Polla', new_polla_path %>
+  <%= link_to 'Crear nueva Polla', new_polla_path %>
+</div>
