--- a/app/views/bets/_bet_jumbo.html.erb
+++ b/app/views/bets/_bet_jumbo.html.erb
@@ -1,7 +1,9 @@
 <div class="col">
     <div class="card  border-secondary mb-3 ">
         <div class="card-header"> 
-            <h5><%= match.dynamic_title_str %></h5> <%= match.start_time.to_formatted_s(:short) %>
+            <h5><%= match.dynamic_title_str %></h5> 
+            Fecha <%= match.week_nr %>  -  <%= match.start_time.to_formatted_s(:short) %>
+            
         </div>
         <div class="card-body col-12">
             <table class="table table-hover">
